CES-475 SQS listener for scalable datafeed (#4)
* Base for scalable datafeed listeners

* Forked version of the Symphony cryptolib

* Fixed jackson dependency hell

* Avoid creating session when not needed

* Fixed healthcheck